# autotools_project_template

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  autotools_project_template.h  autotools_template.pc.in
tests/: Makefile.am
